fix: remove hardcoded java.home path that breaks CI

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
-org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
+# NOTE: Set org.gradle.java.home in your local gradle.properties (~/.gradle/gradle.properties)
+# if needed, NOT here — this file is committed and breaks CI.
