--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -31,7 +31,7 @@ jobs:
       run: echo "sdk.dir=$ANDROID_HOME" >> local.properties
 
     - name: Create google-services.json
-      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
