fix: inject Sentry DSN into AndroidManifest to prevent startup crash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="hemav_default" />
 
+        <!-- Sentry DSN (injected via manifestPlaceholders from build.gradle.kts) -->
+        <meta-data
+            android:name="io.sentry.dsn"
+            android:value="${sentryDsn}" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
